Existing functionality update

--- a/src/force-app/main/default/classes/CasesService.cls
+++ b/src/force-app/main/default/classes/CasesService.cls
@@ -11,10 +11,14 @@ public with sharing class CasesService {
 
     public void preventStatusChangeByNotAnOwner(List<Case> newRecords, Map<Id,Case> oldRecords) {
         Id uId = UserInfo.getUserId();
+        Map<Id, Case> casesWithOwnerStatus = new Map<Id, Case>(CaseSelector.getInstance().getCasesWithOwnerStatusByIds(oldRecords.keySet()));
+
         for (Case newCase : newRecords) {
             if (
                 newCase.Status != oldRecords.get(newCase.Id).Status
                 && newCase.OwnerId != uId
+                && casesWithOwnerStatus.get(newCase.Id) != null 
+                && casesWithOwnerStatus.get(newCase.Id).Owner.IsActive
             ) {
                 newCase.addError(Constants.ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS);
             }
