--- a/src/force-app/main/default/classes/Constants.cls
+++ b/src/force-app/main/default/classes/Constants.cls
@@ -6,6 +6,7 @@ public with sharing class Constants {
     public static final String CASE_STATUS_CLOSED = 'Closed';
     public static final String ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS = 'Please claim case before changing its status!';
     public static final String ADMIN_PROFILE_NAME = 'System Administrator';
+    public static final String ERROR_YOU_CANT_UPDATE_INACTIVE_ACCOUNT = 'You cannot update inactive accout';
 
     @TestVisible
     private static final String ERROR_INSTANCE_SHOULD_BE_NULL = 'Instance should be null.';
