UC3 apex update finish

--- a/src/force-app/main/default/classes/CasesService.cls
+++ b/src/force-app/main/default/classes/CasesService.cls
@@ -11,10 +11,12 @@ public with sharing class CasesService {
 
     public void preventStatusChangeByNotAnOwner(List<Case> newRecords, Map<Id,Case> oldRecords) {
         Id uId = UserInfo.getUserId();
+        Set<Id> inactiveUsers = UserSelector.getInstance().getAllInactiveUsersForCases(oldRecords.values());
         for (Case newCase : newRecords) {
             if (
                 newCase.Status != oldRecords.get(newCase.Id).Status
                 && newCase.OwnerId != uId
+                && !inactiveUsers.contains(oldRecords.get(newCase.Id).OwnerId)
             ) {
                 newCase.addError(Constants.ERROR_PLEASE_CLAIM_CASE_BEFORE_CHANGING_ITS_STATUS);
             }
